# remonti_api

./: .fkake8  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
remonti_app/: manage.py
remonti_app/remonti/: apps.py
remonti_app/remonti_app/: asgi.py  settings.py  urls.py  wsgi.py
