[tool.poetry]
name = "remonti-api"
version = "0.1.0"
description = ""
authors = ["Ekaterina Itchenko <ekaterina.savickaya.1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
djangorestframework = "^3.15.2"

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
skip-string-normalization = false
line-length = 120

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
